@@ -1,16 +1,0 @@
-{ pkgs, ... }:
-let
-  username = "test";
-in
-{
-  users.users.${username} = {
-    password = "123";
-    isNormalUser = true;
-    description = username;
-    shell = pkgs.zsh;
-    extraGroups = [
-      "networkmanager"
-      "wheel"
-    ];
-  };
-}
